--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "TOKEN": "OTQ3MTkwODE3NzU4NTM1NzAw.GaK2rK.SdWL6usyIEtZvvHgzLIfRvfSPP_ZtRB1SBXBZ8",
+  "TOKEN": "O",
   "CLIENT_ID": "947190817758535700",
   "STATUS": "dnd",
   "ACTIVITY_NAME": "SCRIBLLING THINGS"
